welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:1: error: Missing closing brace `}' assumed here
override def run() {
^PatternPicture:1: error: expected start of definition
override def run() {
         ^PatternPicture:7: error: expected class or object definition
def carre (){
^PatternPicture:24: error: expected class or object definition
def faireL (x: Int, sens: Boolean){
^